# Aurora-Terminal

./: .gitignore  README.md  README_zh.md
.github/workflows/: release.yml
docs/: PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_zh.md
src/: package.json
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/src/: commands.rs  main.rs  plugin_engine.rs  serial.rs  ssh.rs  tcp.rs
src/ui/: index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
src/ui/src/: App.tsx  index.css
src/ui/src/components/common/: AuroraBackground.tsx  Button.tsx  CustomSelect.tsx
src/ui/src/components/layout/: MainLayout.tsx  TopBar.tsx
src/ui/src/components/settings/: AppearancePanel.tsx  ColorSchemeEditor.tsx  MarketplacePanel.tsx  SettingsTab.tsx
src/ui/src/components/terminal/: ConnectionPanel.tsx  InputArea.tsx  LogViewer.tsx  TerminalTab.tsx  WidgetsPanel.tsx
src/ui/src/constants/: theme.ts
src/ui/src/context/: AppContext.tsx  I18nContext.tsx
src/ui/src/hooks/: usePluginConnection.ts  useSerial.ts  useTheme.ts
src/ui/src/types/: index.ts
src/ui/src/utils/: format.ts  validator.ts
