[package]
name = "aurora-terminal"
version = "0.1.0"
description = "Aurora Terminal"
authors = ["Aurora Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3.0"
tokio = { version = "1.0", features = ["full"] }
mlua = { version = "0.9", features = ["lua54", "vendored", "serialize"] }
notify = "6.1"
extism = "1.0"
tauri-plugin-shell = "2.0.0"
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"

